# cvbench

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  helper.sh  pyproject.toml
.github/workflows/: ci.yaml  docker.yaml  release.yaml
augmentations/: __init__.py  blur.py  builtin.py  edges.py  lines.py  noise.py  pipeline.py  profiles.py  tone.py
cli/: __init__.py  augmentations.py  evaluate.py  generate.py  runs.py  train.py
core/: checkpoint.py  config.py  data.py  evaluator.py  model.py  registry.py  runs.py  trainer.py
notebooks/: augmentations.ipynb
scripts/: bashrc
src/cvbench/augmentations/: __init__.py  chirp.py  edges.py  interference.py  lines.py  mask.py  mixup.py  net.py  noise.py  pipeline.py  registry.py  transmission.py
src/cvbench/cli/: augmentations.py  data.py  evaluate.py  predict.py  runs.py  train.py
src/cvbench/core/: _fmt.py  checkpoint.py  config.py  data.py  evaluator.py  model.py  preprocessing.py  runs.py  trainer.py
src/cvbench/services/: evaluation.py  export.py  gradcam.py  prediction.py  training.py
src/cvbench/web/: app.py
src/cvbench/web/api/: __init__.py  datasets.py  evaluation.py  explain.py  export.py  prediction.py  runs.py  training.py
src/cvbench/web/static/: index.html
src/cvbench/web/static/css/: datasets.css  experiments.css  inference.css  shared.css  style.css
src/cvbench/web/static/js/: app.js  datasets.js  experiments.js  inference.js  shared.js
tests/: test_augmentations.py  test_checkpoint.py  test_cli.py  test_config.py  test_data.py  test_model.py  test_registry.py  test_runs.py
