[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cvbench"
version = "0.7.0"
requires-python = ">=3.10"
dependencies = [
    "tensorflow==2.16.2",
    "keras==3.5.0",
    "keras-hub==0.19.0",
    "tokenizers==0.22.2",
    "sentencepiece==0.2.1",
    "click==8.3.2",
    "pyyaml==6.0.3",
    "scikit-learn==1.7.2",
    "matplotlib==3.10.8",
    "pandas==2.3.3",
    "tqdm==4.67.3",
]

[project.optional-dependencies]
gpu-mac = [
    "tensorflow-metal",
]
gpu-linux = [
    "tensorflow[and-cuda]==2.16.2",
]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "commitizen==4.13.10",
]

[project.scripts]
train        = "cli.train:train"
evaluate     = "cli.evaluate:evaluate"
predict      = "cli.predict:predict"
runs         = "cli.runs:runs"
generate     = "cli.generate:generate"
augmentations = "cli.augmentations:augmentations"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "cli*", "augmentations*"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
]
markers = [
    "tf: marks tests that require TensorFlow (deselect with '-m \"not tf\"')",
]
