[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cvbench"
version = "0.32.1"
requires-python = ">=3.10"
dependencies = [
    "tensorflow==2.16.2",
    "keras==3.5.0",
    "keras-hub==0.19.0",
    "tokenizers==0.22.2",
    "sentencepiece==0.2.1",
    "click==8.3.2",
    "pyyaml==6.0.3",
    "scikit-learn==1.7.2",
    "matplotlib==3.10.8",
    "pandas==2.3.3",
    "tqdm==4.67.3",
    "Pillow>=10.0",
]

[project.optional-dependencies]
gpu-mac = [
    "tensorflow-metal",
]
gpu-linux = [
    "tensorflow[and-cuda]==2.16.2",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.9",
]
export = [
    "tf2onnx==1.17.0",
    "onnx==1.16.2",
    "onnxruntime>=1.18",
]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "commitizen==4.13.10",
]

[project.scripts]
train        = "cvbench.cli.train:train"
evaluate     = "cvbench.cli.evaluate:evaluate"
predict      = "cvbench.cli.predict:predict"
runs         = "cvbench.cli.runs:runs"
data          = "cvbench.cli.data:data"
augmentations = "cvbench.cli.augmentations:augmentations"
serve         = "cvbench.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cvbench = ["web/static/**/*"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:builtin type.*has no __module__ attribute:DeprecationWarning",
]
markers = [
    "tf: marks tests that require TensorFlow (deselect with '-m \"not tf\"')",
]
